2023. 3.15. Modified specifications of zTri2DPointIsInside, zDisk2DPointIsInside, zEllips2DPointIsInside, zTri3DPointIsInside, zBox3DPointIsInside, zSphere3DPointIsInside, zCyl3DPointIsInside, zCone3DPointIsInside, zEllips3DPointIsInside, zECyl3DPointIsInside, zPH3DPointIsInside, zShape3DPointIsInside, zMShape3DPointIsInside, zAABox2DPointIsInside, and zAABox3DPointIsInside to provide margin. [zeo_elem2d, zeo_elem3d, zeo_elem3d_list, zeo_ph, zeo_shape3d, zeo_shape3d_box, zeo_shape3d_sphere, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_ellips, zeo_shape3d_ecyl, zeo_mshape3d, zeo_col, zeo_col_box, zeo_col_gjk, zeo_bv2d_aabb, zeo_bv3d_aabb, zeo_bv2d_bdisk, zeo_bv3d_bball, zeo_bv3d_ch, zeo_voronoi2d]
2023. 3.15. Renamed zPH3DPrism, zPH3DPyramid, zPH3DTorus, and zPH3DLathe to zPH3DCreatePrism, zPH3DCreatePyramid, zPH3DCreateTorus, and zPH3DCreateLathe, respectively. [zeo_ph]
2023. 3.15. Debugged zECyl3DClosest. [zeo_shape3d_ecyl]
2023. 3.14. Added zEllips2D class. [zeo_elem2d]
2023. 3.14. Redefined z*3DAlloc by using ZDEF_ALLOC_FUNCTION. [zeo_shape3d_box, zeo_shape3d_sphere, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_ellips, zeo_shape3d_ecyl]
2023. 3.14. Added zVec2DRot90CW and zVec2DRot90CCW. [zeo_vec2d]
2023. 3.13. Added a test case for zGJKPoint. [example, test]
2023. 3.13. Modified makefile for examples to automatically remove .ztk files in directories other than model/with make clean. [example]
2023. 3. 9. Added zEdge2DLinScale and zEdge2DClosest by using ZEDGEXD_LINSCALE and ZEDGEXD_CLOSEST macros. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
2023. 3. 9. Added zeo_elemxd and reimplemented some methods that are common in zeo_elem2d and zeo_elem3d. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
2023. 3. 4. Added methods to zEP class. [zeo_ep]
2023. 3. 4. Added zEPAdd. [zeo_ep]
2023. 3. 4. Redefined zVec2D, zVec3D, zVec6D, zMat3D, zMat6D, zFrame3D, and zEP by using ZDEF_STRUCT/ZDEF_UNION. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_mat6d zeo_frame3d, zeo_ep]