@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.12.0
+VERSION=1.12.1
 
 DEPENDENCY="zeda=1.6.41;zm=1.5.1"
 
