@@ -1,3 +1,4 @@
+2023. 3.15. Modified output of usage of zeo_qhull. [app]
 2023. 3.15. Modified specifications of zTri2DPointIsInside, zDisk2DPointIsInside, zEllips2DPointIsInside, zTri3DPointIsInside, zBox3DPointIsInside, zSphere3DPointIsInside, zCyl3DPointIsInside, zCone3DPointIsInside, zEllips3DPointIsInside, zECyl3DPointIsInside, zPH3DPointIsInside, zShape3DPointIsInside, zMShape3DPointIsInside, zAABox2DPointIsInside, and zAABox3DPointIsInside to provide margin. [zeo_elem2d, zeo_elem3d, zeo_elem3d_list, zeo_ph, zeo_shape3d, zeo_shape3d_box, zeo_shape3d_sphere, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_ellips, zeo_shape3d_ecyl, zeo_mshape3d, zeo_col, zeo_col_box, zeo_col_gjk, zeo_bv2d_aabb, zeo_bv3d_aabb, zeo_bv2d_bdisk, zeo_bv3d_bball, zeo_bv3d_ch, zeo_voronoi2d]
 2023. 3.15. Renamed zPH3DPrism, zPH3DPyramid, zPH3DTorus, and zPH3DLathe to zPH3DCreatePrism, zPH3DCreatePyramid, zPH3DCreateTorus, and zPH3DCreateLathe, respectively. [zeo_ph]
 2023. 3.15. Debugged zECyl3DClosest. [zeo_shape3d_ecyl]
